[gd_scene load_steps=14 format=3 uid="uid://ctmnc8vem7jt0"]

[ext_resource type="Script" uid="uid://hoyf36n0mgmh" path="res://Scripts/pause_menu.gd" id="1_u8tnp"]
[ext_resource type="Texture2D" uid="uid://c2m3q2qnmymm6" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Resume BUTTON (not hovered).png" id="2_sjs17"]
[ext_resource type="Texture2D" uid="uid://uqoxqa0tihrq" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Resume BUTTON (hovered).png" id="3_u8tnp"]
[ext_resource type="Texture2D" uid="uid://bgubsp0bxq0sc" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Main Menu BUTTON (not hovered).png" id="4_stj27"]
[ext_resource type="Texture2D" uid="uid://b1pjvq5dsh12y" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Main Menu BUTTON (hovered).png" id="5_ix48p"]
[ext_resource type="Texture2D" uid="uid://dhfqr2yoib7c6" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Quit BUTTON (not hovered).png" id="6_524vl"]
[ext_resource type="Texture2D" uid="uid://crwkkhbg55f28" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Options BUTTON (not hovered).png" id="6_ix48p"]
[ext_resource type="Texture2D" uid="uid://1npnqh3y7n8h" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Quit BUTTON (hovered).png" id="7_0fi7f"]
[ext_resource type="Texture2D" uid="uid://6sry21sva7s7" path="res://Assets/PIXEL SWIMMER MENU Button Assets/Options BUTTON (hovered).png" id="7_524vl"]
[ext_resource type="Texture2D" uid="uid://4l08p5pi7edm" path="res://Assets/Backgrounds/CERVIX SPERM GAME BACKGROUND V3.png" id="11_0fi7f"]
[ext_resource type="AudioStream" uid="uid://bbo5sktnx2wxn" path="res://Assets/Sound Design/Music/Pixel Swimmer Menu Music.wav" id="11_524vl"]
[ext_resource type="Texture2D" uid="uid://cs3g6fg0ouefh" path="res://Assets/PIXEL SWIMMER MENU Button Assets/PAUSE TEXT.png" id="12_0fi7f"]
[ext_resource type="PackedScene" uid="uid://cghi1x1nngvw8" path="res://Scenes/options.tscn" id="13_uscpe"]

[node name="Pause Menu" type="Node2D"]
script = ExtResource("1_u8tnp")

[node name="Pause" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 113.0
offset_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
layout_mode = 0
offset_left = 56.000004
offset_top = 240.0
offset_right = 401.0
offset_bottom = 658.0
scale = Vector2(1.2562219, 1.2753611)

[node name="Resume" type="TextureButton" parent="Pause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_sjs17")
texture_hover = ExtResource("3_u8tnp")

[node name="Main Menu" type="TextureButton" parent="Pause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_stj27")
texture_hover = ExtResource("5_ix48p")

[node name="Options" type="TextureButton" parent="Pause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_ix48p")
texture_hover = ExtResource("7_524vl")

[node name="Quit" type="TextureButton" parent="Pause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_524vl")
texture_hover = ExtResource("7_0fi7f")

[node name="OptionsMenu" parent="." instance=ExtResource("13_uscpe")]
physics_interpolation_mode = 1

[node name="PauseMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_524vl")
volume_db = -5.0
autoplay = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
scale = Vector2(0.52734375, 0.62434894)
texture = ExtResource("11_0fi7f")
centered = false
region_rect = Rect2(0, 0, 540, 960)
metadata/_edit_lock_ = true

[node name="PauseText" type="Sprite2D" parent="."]
position = Vector2(269.00003, 220.00002)
scale = Vector2(1.78, 1.78)
texture = ExtResource("12_0fi7f")

[connection signal="pressed" from="Pause/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Resume" to="Pause" method="pause_or_unpause"]
[connection signal="pressed" from="Pause/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
